# flatbush

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  bench.cpp  build-env.sh  flatbush.h  fuzz.cpp  fuzz_from.cpp  fuzz_neighbors.cpp  fuzz_search.cpp  test.cpp
.github/workflows/: bench.yml  cmake.yml  codeql.yml  cppcheck.yml  devskim.yml  flawfinder.yml  format.yml  fuzz.yml  macos.yml  simd.yml  test.yml  ubuntu.yml  windows.yml
benchmarks/: data.js
benchmarks/clang++/: data.js
benchmarks/g++/: data.js
cmake/: config.cmake.in  configVersion.cmake.in
